--- a/07-WeatherGeneration.Rmd
+++ b/07-WeatherGeneration.Rmd
@@ -10,7 +10,7 @@ Two modes of weather generation are offered:
 
 ## Unconditional weather generation algorithm
 
-The algorithm is based on Apipattanavis et al. (2007) and combines a Markov Chain (MC) to generate the sequence of precipitation states with a *k*-nearest neighbor (*k*-NN) bootstrap resampler to generate multivariate and multisite weather variables. The MC is used to better represent wet and dry spell statistics while the *k*-NN bootstrap resampler preserves the covariance structure between weather variables and across space. 
+The algorithm is based on @Apipattanavis2007 and combines a Markov Chain (MC) to generate the sequence of precipitation states with a *k*-nearest neighbor (*k*-NN) bootstrap resampler to generate multivariate and multisite weather variables. The MC is used to better represent wet and dry spell statistics while the *k*-NN bootstrap resampler preserves the covariance structure between weather variables and across space. 
 
 The weather generation approach is based on the common practice of first simulating precipitation occurence as a chain-dependent process. A three-state (dry / wet / extremely wet) Markov chain (MC) of order 1 is used to simulate an (area-averaged) precipitation state series. Nine transition probabilities are fit to the (area-averaged) input precipitation state series by month using maximum likelihood. A threshold of 0.3 mm (by default) is chosen to distinguish between dry and wet days, while the 80th percentile of precipitation (on wet days) is used as a threshold for extremely wet conditions. The fitted MC can be used to simulate (area-averaged) precipitation state series. A *k*-NN resampling algorithm of lag-1 is used
 to generate the values for all the weather variables, including disaggregation to $L$ locations. The *k*-NN bootstrap resampler algorithm follows six steps (description adapted from Steinschneider et al. 2013):
@@ -37,6 +37,6 @@ To begin the resampling algorithm and generate initial (area-averaged) $\bar{\bf
 
 The algorithm described in the previous section allows generating intra-annual (i.e. seasonal) weather variation because of monthly calibration of the MC and $k$-NN selection of pairs of days on the basis of their day of the year. However, year-to-year variation in annual precipitation or mean temperature will arise due to stochasticity only. Multi-year variation (i.e. low-frequency periodic variations or long-term trends) cannot be simulated. Two alternative approaches are offered in **meteoland** to condition stochastic weather generation on multi-year variation.
 
-1. Annual precipitation can be conditioned by using a stationary auto-regressive (ARIMA) model annual precipitation and then using a $k$-nearest neighbor algorithm (similar to that of the previous section) to select years of the original weather series with annual precipitation similar to the simulated one and produce a bootstrap resample of weather data to train the MC-KNN algorithm (Steinschneider et al. 2013). This option is recommended if low-frequency variation of annual precipitation is to be acounted for in long series.
+1. Annual precipitation can be conditioned by using a stationary auto-regressive (ARIMA) model annual precipitation and then using a $k$-nearest neighbor algorithm (similar to that of the previous section) to select years of the original weather series with annual precipitation similar to the simulated one and produce a bootstrap resample of weather data to train the MC-KNN algorithm [@Steinschneider2013]. This option is recommended if low-frequency variation of annual precipitation is to be acounted for in long series.
 
 2. Multi-year temperature or precipitation trends of the original series can be preserved by using a moving window. Each target year, a window around the target year is used to subset the original series. Annual precipitation to be simulated is then conditioned using a lognormal random trial of the precipitation corresponding to the selected years. Then, the same $k$-NN algorithm is used to produce a bootstrap resample of weather data from the years included in the moving window. This strategy is recommended to generate multiple stochastic series from (already corrected) climate change projections, as it preserves long-term trends.
