--- a/meteoland.bib
+++ b/meteoland.bib
@@ -1,13 +1,3 @@
-@article{McMahon2013,
-author = {McMahon, T.A. and Peel, M.C. and Lowe, L. and Srikanthan, R. and McVicar, T.R.},
-doi = {10.5194/hess-17-1331-2013},
-file = {:D$\backslash$:/Mendeley Desktop/McMahon et al. - 2013 - Estimating actual, potential, reference crop and pan evaporation using standard meteorological data a pragmat(2).pdf:pdf;:D$\backslash$:/Mendeley Desktop/McMahon et al. - 2013 - Estimating actual, potential, reference crop and pan evaporation using standard meteorological data a pragmatic.pdf:pdf},
-journal = {Hydrology {\&} Earth System Sciences},
-pages = {1331--1363},
-title = {{Estimating actual, potential, reference crop and pan evaporation using standard meteorological data: a pragmatic synthesis}},
-volume = {17},
-year = {2013}
-}
 @article{Garnier1968,
 abstract = {A formula has been developed whereby variations in the shortwave radiation income on different slopes in any latitude can be easily determined from a knowledge of surface geometry and the sun's declination. This is achieved by expressing slope characteristics and the sun's position as unit vectors in the coordinates of a common system, and multiplying the cosine of the angle between the two vectors by a factor involving the solar constant, atmospheric transmissivity and the optical air mass. Integration of the formula permits the topographic variations of direct shortwave radiation income over specified areas to be calculated for daily or longer periods from radiation observations at a single site. Thus, a device has been developed which has applications in many aspects of pure and applied microclimatology, and which differs from other similar formulae in that it is at the same time both integrable and applicable under different atmospheric transmissivities.},
 author = {Garnier, B. J. and Ohmura, Atsumu},
@@ -20,18 +10,6 @@ title = {{A method of calculating the direct shortwave radiation income of slope
 url = {http://journals.ametsoc.org/doi/abs/10.1175/1520-0450(1968)007{\%}3C0796:AMOCTD{\%}3E2.0.CO;2},
 volume = {7},
 year = {1968}
-}
-@book{Tymstra2010,
-abstract = {Accurate, high-resolution fire behavior prediction is a critical component of fire management decision-making before and during fires. Prometheus is a deterministic fire growth simulation model that was developed to help fire managers to understand the probable consequences of their decisions. It uses spatial input data on topography (slope, aspect, and elevation), fuel types, and weather to simulate fire growth by applying Huygens principle of wave propagation to the rate-of-spread predictions from the Canadian Forest Fire Behavior Prediction System of the Canadian Forest Fire Danger Rating System. This approach produces detailed fire perimeters at user-specified display time step intervals. Each active vertex along the perimeter has corresponding fire behavior output. Exported fire perimeters are compatible with geographic information systems. Additionally, three interpolation techniques are available to produce optional raster fire behavior outputs. This report documents the structure of the Prometheus model and an assessment of its performance. The report includes a general discussion of approaches to the modeling of fire growth simulation and explains the vector propagation technique used in Prometheus. The limitations and assumptions of applying the model, as well as the most appropriate directions for future research, are also discussed.},
-author = {Tymstra, C and Bryce, R W and Wotton, B M and Taylor, S W and Armitage, O B},
-booktitle = {Information report NOR-X-417},
-doi = {ISBN 978-1-100-14674-4},
-file = {:D$\backslash$:/Mendeley Desktop/Tymstra et al. - 2010 - Development and Structure of Prometheus the Canadian Wildland Fire Growth Simulation Model.pdf:pdf},
-isbn = {9781100146744},
-pages = {88},
-title = {{Development and Structure of Prometheus : the Canadian Wildland Fire Growth Simulation Model}},
-url = {http://scholar.google.com/scholar?hl=en{\&}btnG=Search{\&}q=intitle:Development+and+Structure+of+Prometheus+:+the+Canadian+Wildland+Fire+Growth+Simulation+Model{\#}0},
-year = {2010}
 }
 @article{Ruffault2014,
 author = {Ruffault, Julien and Martin-StPaul, Nicolas K and Duffet, Carole and Goge, Fabien and Mouillot, Florent},
@@ -46,46 +24,6 @@ title = {{Projecting future drought in Mediterranean forests: bias correction of
 url = {http://link.springer.com/10.1007/s00704-013-0992-z},
 volume = {117},
 year = {2014}
-}
-@article{Deque2007,
-abstract = {M{\'{e}}t{\'{e}}o-France atmospheric model ARPEGE/Climate has been used to simulate present climate (1961-1990) and a possible future climate (2071-2100) through two ensembles of three 30-year numerical experiments. In the scenario experiment, the greenhouse gas and aerosol concentrations are prescribed by the so-called SRES-A2 hypotheses, whereas the sea surface temperature and sea ice extent come from an earlier ocean-atmosphere coupled simulation. The model covers the whole globe, with a variable resolution reaching 50 to 60 km over France. Model responses on daily minimum and maximum temperature and precipitation are analyzed over France. The distribution of daily values is compared with observed data from the French climatological network. The extreme cold temperatures and summer heavy precipitations are underestimated by the model. A correction technique is proposed in order to adjust the simulated values according to the observed ones. This process is applied to both reference and scenario simulation. Synthetic indices of extreme events are calculated with corrected simulations. The number of heavy rain ({\textgreater} 10 mm) days increases by one quarter in winter. The maximum length of summer dry episodes increases by one half in summer. The number of heat wave days is multiplied by 10. The response in precipitation is less when only the change in the mean is considered. Such a corrected simulation is useful to feed impact models which are sensitive to threshold values, but the correction does not reduce, and may enhance in some cases, the uncertainty about the climate projections. Using several models and scenarios is the appropriate technique to deal with uncertainty. {\textcopyright} 2006 Elsevier B.V. All rights reserved.},
-author = {D{\'{e}}qu{\'{e}}, Michel},
-doi = {10.1016/j.gloplacha.2006.11.030},
-file = {:D$\backslash$:/Mendeley Desktop/D{\'{e}}qu{\'{e}} - 2007 - Frequency of precipitation and temperature extremes over France in an anthropogenic scenario Model results and statistica.pdf:pdf},
-isbn = {0921-8181},
-issn = {09218181},
-journal = {Global and Planetary Change},
-keywords = {extreme values,numerical simulation,regional climate,scenario},
-number = {1-2},
-pages = {16--26},
-title = {{Frequency of precipitation and temperature extremes over France in an anthropogenic scenario: Model results and statistical correction according to observed values}},
-volume = {57},
-year = {2007}
-}
-@article{Valiantzas2006,
-abstract = {At standard weather stations the routine weather records usually available are air temperature, T (??C), solar radiation RS (MJ/m2/d), relative humidity, RH ({\%}), and wind velocity, u (m/s). A simple algebraic formula, equivalent in accuracy to the Penman equation is derived for computing evaporation from readily available measured data. The derivation of the formula is based on simplifications made to the "standardized" form of the Penman equation. The two components of the standard Penman equation (radiation and aerodynamic) were computed indirectly from the available routine weather data using the standardized calculation procedure recommended by Shuttleworth [Shuttleworth, W.J., 1993. In: Maidment, D.R. (Ed.), Evaporation, McGraw-Hill, New York, pp. 4.1-4.53 (Chapter 4)] and Allen et al. [Allen, R.G., Pereira, L.S., Raes, D., Smith, M., 1998. Crop evapotranspiration: guidelines for computing crop water requirements. FAO Irrigation and Drainage Paper, 56, Rome, 300 pp]. In addition, another, more simplified formula, easy to use for routine hydrologic applications, is also developed. On the other hand, at many places reliable wind speed data are rarely available. For such cases, an expression, which does not require wind speed data, is proposed. The simplified formula for the Penman equation proposed to estimate potential evaporation from open-water without recourse to wind data is EPEN ??? 0.047 RS sqrt(T + 9.5) - 2.4 (RS / RA)2 + 0.09 (T + 20) (1 - RH / 100) where RA (MJ/m2/d) is the extraterrestrial radiation. A simplified expression for the calculation of RA is also given. The simplicity of the formulas is demonstrated in a computational example applied for monthly climatic data. The performance of the new derived formulas was tested under various climatic conditions using a global climatic data set including monthly data as well as daily data obtained from a weather station. The new open water evaporation formulas were also adapted for calculating reference crop evapotranspiration. ?? 2006 Elsevier B.V. All rights reserved.},
-author = {Valiantzas, John D.},
-doi = {10.1016/j.jhydrol.2006.06.012},
-isbn = {0022-1694},
-issn = {00221694},
-journal = {Journal of Hydrology},
-keywords = {Evapotranspiration,Hydrologic models,Open water evaporation,Penman equation,Penman-Monteith,Water resources management},
-number = {3-4},
-pages = {690--702},
-title = {{Simplified versions for the Penman evaporation equation using routine weather data}},
-volume = {331},
-year = {2006}
-}
-@article{Spitters1986,
-author = {Spitters, C. J. T. and Toussaint, H.A.J.M. and Goudriaan, J.},
-doi = {10.1016/0168-1923(86)90060-2},
-file = {:D$\backslash$:/Mendeley Desktop/Spitters, Toussaint, Goudriaan - 1986 - Separating the diffuse and direct components of global radiation and its implications for modeli.pdf:pdf},
-isbn = {0168-1923},
-journal = {Agricultural and Forest Meteorology},
-pages = {231--242},
-title = {{Separating the diffuse and direct components of global radiation and its implications for modeling canopy photosynthesis. I. Components of incoming radiation}},
-volume = {38},
-year = {1986}
 }
 @article{Thornton1997,
 abstract = {A method for generating daily surfaces of temperature, precipitation, humidity, and radiation over large regions of complex terrain is presented. Required inputs include digital elevation data and observations of maximum temperature, minimum temperature and precipitation from ground-based meteorological stations. Our method is based on the spatial convolution of a truncated Gaussian weighting filter with the set of station locations. Sensitivity to the typical heterogeneous distribution of stations in complex terrain is accomplished with an iterative station density algorithm. Spatially and temporally explicit empirical analyses of the relationships of temperature and precipitation to elevation were performed, and the characteristic spatial and temporal scales of these relationships were explored. A daily precipitation occurrence algorithm is introduced, as a precursor to the prediction of daily precipitation amount. Surfaces of humidity (vapor pressure deficit) are generated as a function of the predicted daily minimum temperature and the predicted daily average daylight temperature. Daily surfaces of incident solar radiation are generated as a function of Sun-slope geometry and interpolated diurnal temperature range. The application of these methods is demonstrated over an area of approximately 400 000 detailed illustration of the parameterization process. A cross-validation analysis was performed, comparing predicted and observed daily and annual average values. Mean absolute errors (MAE) for predicted annual average maximum and minimum temperature were 0.7°C and 1.2°C, with biases of +0.1°C and −0.1°C, respectively. MAE for predicted annual total precipitation was 13.4 cm, or, expressed as a percentage of the observed annual totals, 19.3{\%}. The success rate for predictions of daily precipitation occurrence was 83.3{\%}. Particular attention was given to the predicted and observed relationships between precipitation frequency and intensity, and they were shown to be similar. We tested the sensitivity of these methods to prediction grid-point spacing, and found that areal averages were unchanged for grids ranging in spacing from 500 m to 32 km. We tested the dependence of the results on timestep, and found that the temperature prediction algorithms scale perfectly in this respect. Temporal scaling of precipitation predictions was complicated by the daily occurrence predictions, but very nearly the same predictions were obtained at daily and annual timesteps.},
@@ -102,20 +40,28 @@ url = {http://www.sciencedirect.com/science/article/pii/S0022169496031289},
 volume = {190},
 year = {1997}
 }
-@article{DeCaceres2018,
-author = {{De C{\'{a}}ceres}, Miquel and Martin-StPaul, Nicolas and Turco, Marco and Cabon, Antoine and Granda, Victor},
-doi = {10.1016/j.envsoft.2018.08.003},
-file = {:D$\backslash$:/Mendeley Desktop/De C{\'{a}}ceres et al. - 2018 - Estimating daily meteorological data and downscaling climate models over landscapes.pdf:pdf},
-issn = {13648152},
-journal = {Environmental Modelling {\&} Software},
-keywords = {Bias correction,Climate change,Drought stress,Regional climate model,Statistical downscaling,Weather interpolation},
-number = {August},
-pages = {186--196},
-publisher = {Elsevier},
-title = {{Estimating daily meteorological data and downscaling climate models over landscapes}},
-url = {https://linkinghub.elsevier.com/retrieve/pii/S1364815217309830},
-volume = {108},
-year = {2018}
+@book{Tymstra2010,
+abstract = {Accurate, high-resolution fire behavior prediction is a critical component of fire management decision-making before and during fires. Prometheus is a deterministic fire growth simulation model that was developed to help fire managers to understand the probable consequences of their decisions. It uses spatial input data on topography (slope, aspect, and elevation), fuel types, and weather to simulate fire growth by applying Huygens principle of wave propagation to the rate-of-spread predictions from the Canadian Forest Fire Behavior Prediction System of the Canadian Forest Fire Danger Rating System. This approach produces detailed fire perimeters at user-specified display time step intervals. Each active vertex along the perimeter has corresponding fire behavior output. Exported fire perimeters are compatible with geographic information systems. Additionally, three interpolation techniques are available to produce optional raster fire behavior outputs. This report documents the structure of the Prometheus model and an assessment of its performance. The report includes a general discussion of approaches to the modeling of fire growth simulation and explains the vector propagation technique used in Prometheus. The limitations and assumptions of applying the model, as well as the most appropriate directions for future research, are also discussed.},
+author = {Tymstra, C and Bryce, R W and Wotton, B M and Taylor, S W and Armitage, O B},
+booktitle = {Information report NOR-X-417},
+doi = {ISBN 978-1-100-14674-4},
+file = {:D$\backslash$:/Mendeley Desktop/Tymstra et al. - 2010 - Development and Structure of Prometheus the Canadian Wildland Fire Growth Simulation Model.pdf:pdf},
+isbn = {9781100146744},
+pages = {88},
+title = {{Development and Structure of Prometheus : the Canadian Wildland Fire Growth Simulation Model}},
+url = {http://scholar.google.com/scholar?hl=en{\&}btnG=Search{\&}q=intitle:Development+and+Structure+of+Prometheus+:+the+Canadian+Wildland+Fire+Growth+Simulation+Model{\#}0},
+year = {2010}
+}
+@article{Spitters1986,
+author = {Spitters, C. J. T. and Toussaint, H.A.J.M. and Goudriaan, J.},
+doi = {10.1016/0168-1923(86)90060-2},
+file = {:D$\backslash$:/Mendeley Desktop/Spitters, Toussaint, Goudriaan - 1986 - Separating the diffuse and direct components of global radiation and its implications for modeli.pdf:pdf},
+isbn = {0168-1923},
+journal = {Agricultural and Forest Meteorology},
+pages = {231--242},
+title = {{Separating the diffuse and direct components of global radiation and its implications for modeling canopy photosynthesis. I. Components of incoming radiation}},
+volume = {38},
+year = {1986}
 }
 @article{Reda2008,
 abstract = {This report is a step-by-step procedure for implementing an algorithm to calculate the solar zenith and azimuth angles in the period from the year --2000 to 6000, with uncertainties of {\$}\backslashpm{\$}0.0003/.},
@@ -145,6 +91,21 @@ title = {{Technical Note: Downscaling RCM precipitation to the station scale usi
 volume = {16},
 year = {2012}
 }
+@article{Thornton2000,
+abstract = {Using daily observations of temperature, precipitation, radiation, and humidity from 24 stations spanning a large elevation gradient in Austria, we tested several previously defined algorithms for estimating daily radiation and humidity. The estimation algorithms were first tested independently, and then combined, resulting in a combined algorithm for estimating both radiation and humidity that relies only on temperature and precipitation inputs. Mean absolute errors (MAE) for joint radiation and humidity estimates were 2.52 MJ m$\backslash$n -2 per day and 85.6 Pa, respectively, close to values reported for the algorithm development studies. Biases were low: +0.02 MJ m$\backslash$n -2 per day and +28.2 Pa for radiation and humidity, respectively. Initial results showed biases in estimated radiation related to horizon obstruction and snowpack. We amended the original algorithm, successfully eliminating these effects. Annual prediction MAE was weakly correlated with elevation, and annual bias was not correlated with elevation. Analysis of seasonal patterns in error-elevation relationships showed several periods with significant trends. Radiation MAE was slightly higher in mid-summer for higher elevations, and radiation biases were in general closer to zero throughout the spring and summer at higher elevations. Humidity estimates showed an increased MAE and positive bias at higher elevations in winter. We concluded that the effect of different temperature lapse rates for daily maximum and minimum temperature on the relationship between diurnal temperature range and atmospheric transmittance does not seriously impair predictions over steep elevation gradients in complex terrain. (C) 2000 Elsevier Science B.V.},
+author = {Thornton, Peter E. and Hasenauer, Hubert and White, Michael a.},
+doi = {10.1016/S0168-1923(00)00170-2},
+file = {:D$\backslash$:/Mendeley Desktop/Thornton, Hasenauer, White - 2000 - Simultaneous estimation of daily solar radiation and humidity from observed temperature and precipit.pdf:pdf},
+isbn = {0168-1923},
+issn = {01681923},
+journal = {Agricultural and Forest Meteorology},
+keywords = {Biometeorology,Humidity,Lapse rate,Snowcover,Solar radiation,Temperature},
+number = {4},
+pages = {255--271},
+title = {{Simultaneous estimation of daily solar radiation and humidity from observed temperature and precipitation: An application over complex terrain in Austria}},
+volume = {104},
+year = {2000}
+}
 @article{Sanjuan2014,
 author = {Sanjuan, Gemma and Brun, Carlos and Cort, Ana},
 doi = {10.1016/j.procs.2014.05.139},
@@ -155,6 +116,66 @@ title = {{Wind field uncertainty in forest fire propagation prediction}},
 volume = {29},
 year = {2014}
 }
+@article{Valiantzas2006,
+abstract = {At standard weather stations the routine weather records usually available are air temperature, T (??C), solar radiation RS (MJ/m2/d), relative humidity, RH ({\%}), and wind velocity, u (m/s). A simple algebraic formula, equivalent in accuracy to the Penman equation is derived for computing evaporation from readily available measured data. The derivation of the formula is based on simplifications made to the "standardized" form of the Penman equation. The two components of the standard Penman equation (radiation and aerodynamic) were computed indirectly from the available routine weather data using the standardized calculation procedure recommended by Shuttleworth [Shuttleworth, W.J., 1993. In: Maidment, D.R. (Ed.), Evaporation, McGraw-Hill, New York, pp. 4.1-4.53 (Chapter 4)] and Allen et al. [Allen, R.G., Pereira, L.S., Raes, D., Smith, M., 1998. Crop evapotranspiration: guidelines for computing crop water requirements. FAO Irrigation and Drainage Paper, 56, Rome, 300 pp]. In addition, another, more simplified formula, easy to use for routine hydrologic applications, is also developed. On the other hand, at many places reliable wind speed data are rarely available. For such cases, an expression, which does not require wind speed data, is proposed. The simplified formula for the Penman equation proposed to estimate potential evaporation from open-water without recourse to wind data is EPEN ??? 0.047 RS sqrt(T + 9.5) - 2.4 (RS / RA)2 + 0.09 (T + 20) (1 - RH / 100) where RA (MJ/m2/d) is the extraterrestrial radiation. A simplified expression for the calculation of RA is also given. The simplicity of the formulas is demonstrated in a computational example applied for monthly climatic data. The performance of the new derived formulas was tested under various climatic conditions using a global climatic data set including monthly data as well as daily data obtained from a weather station. The new open water evaporation formulas were also adapted for calculating reference crop evapotranspiration. ?? 2006 Elsevier B.V. All rights reserved.},
+author = {Valiantzas, John D.},
+doi = {10.1016/j.jhydrol.2006.06.012},
+isbn = {0022-1694},
+issn = {00221694},
+journal = {Journal of Hydrology},
+keywords = {Evapotranspiration,Hydrologic models,Open water evaporation,Penman equation,Penman-Monteith,Water resources management},
+number = {3-4},
+pages = {690--702},
+title = {{Simplified versions for the Penman evaporation equation using routine weather data}},
+volume = {331},
+year = {2006}
+}
+@article{DeCaceres2018,
+author = {{De C{\'{a}}ceres}, Miquel and Martin-StPaul, Nicolas and Turco, Marco and Cabon, Antoine and Granda, Victor},
+doi = {10.1016/j.envsoft.2018.08.003},
+file = {:D$\backslash$:/Mendeley Desktop/De C{\'{a}}ceres et al. - 2018 - Estimating daily meteorological data and downscaling climate models over landscapes.pdf:pdf},
+issn = {13648152},
+journal = {Environmental Modelling {\&} Software},
+keywords = {Bias correction,Climate change,Drought stress,Regional climate model,Statistical downscaling,Weather interpolation},
+number = {August},
+pages = {186--196},
+publisher = {Elsevier},
+title = {{Estimating daily meteorological data and downscaling climate models over landscapes}},
+url = {https://linkinghub.elsevier.com/retrieve/pii/S1364815217309830},
+volume = {108},
+year = {2018}
+}
+@article{Deque2007,
+abstract = {M{\'{e}}t{\'{e}}o-France atmospheric model ARPEGE/Climate has been used to simulate present climate (1961-1990) and a possible future climate (2071-2100) through two ensembles of three 30-year numerical experiments. In the scenario experiment, the greenhouse gas and aerosol concentrations are prescribed by the so-called SRES-A2 hypotheses, whereas the sea surface temperature and sea ice extent come from an earlier ocean-atmosphere coupled simulation. The model covers the whole globe, with a variable resolution reaching 50 to 60 km over France. Model responses on daily minimum and maximum temperature and precipitation are analyzed over France. The distribution of daily values is compared with observed data from the French climatological network. The extreme cold temperatures and summer heavy precipitations are underestimated by the model. A correction technique is proposed in order to adjust the simulated values according to the observed ones. This process is applied to both reference and scenario simulation. Synthetic indices of extreme events are calculated with corrected simulations. The number of heavy rain ({\textgreater} 10 mm) days increases by one quarter in winter. The maximum length of summer dry episodes increases by one half in summer. The number of heat wave days is multiplied by 10. The response in precipitation is less when only the change in the mean is considered. Such a corrected simulation is useful to feed impact models which are sensitive to threshold values, but the correction does not reduce, and may enhance in some cases, the uncertainty about the climate projections. Using several models and scenarios is the appropriate technique to deal with uncertainty. {\textcopyright} 2006 Elsevier B.V. All rights reserved.},
+author = {D{\'{e}}qu{\'{e}}, Michel},
+doi = {10.1016/j.gloplacha.2006.11.030},
+file = {:D$\backslash$:/Mendeley Desktop/D{\'{e}}qu{\'{e}} - 2007 - Frequency of precipitation and temperature extremes over France in an anthropogenic scenario Model results and statistica.pdf:pdf},
+isbn = {0921-8181},
+issn = {09218181},
+journal = {Global and Planetary Change},
+keywords = {extreme values,numerical simulation,regional climate,scenario},
+number = {1-2},
+pages = {16--26},
+title = {{Frequency of precipitation and temperature extremes over France in an anthropogenic scenario: Model results and statistical correction according to observed values}},
+volume = {57},
+year = {2007}
+}
+@article{Penman1948,
+author = {Penman, H.L.},
+journal = {Proceedings of the Royal Society of London. Series A. Mathematical and Physical Sciences},
+pages = {129--145},
+title = {{Natural evaporation from open water, bare soil and grass}},
+volume = {193},
+year = {1948}
+}
+@article{Penman1956,
+author = {Penman, H.L.},
+journal = {Netherlands Journal of Agricultural Science},
+pages = {9--29},
+title = {{Evaporation: An introductory survey}},
+volume = {4},
+year = {1956}
+}
 @book{Danby1988,
 address = {Richmond, VA},
 author = {Danby, J.M},
@@ -163,20 +184,6 @@ pages = {207},
 publisher = {Willmann-Bell},
 title = {{Fundamentals of Celestial Mechanics}},
 year = {1988}
-}
-@article{Boe2007,
-archivePrefix = {arXiv},
-arxivId = {10.1002/joc.1602},
-author = {Bo{\'{e}}, J and Terray, L and Habets, F and Martin, E},
-doi = {10.1002/joc.1602},
-eprint = {joc.1602},
-file = {:D$\backslash$:/Mendeley Desktop/Bo{\'{e}} et al. - 2007 - Statistical and dynamical downscaling of the Seine basin climate for hydro-meteorological studies.pdf:pdf},
-journal = {International Journal of Climatology},
-pages = {1643--1655},
-primaryClass = {10.1002},
-title = {{Statistical and dynamical downscaling of the Seine basin climate for hydro-meteorological studies}},
-volume = {27},
-year = {2007}
 }
 @article{Thornton1999,
 abstract = {We present a reformulation of the Bristow±Campbell model for daily solar radiation, developed using daily observations of radiation, temperature, humidity, and precipitation, from 40 stations in contrasting climates. By expanding the original model to include a spatially and temporally variable estimate of clear-sky transmittance, and applying a small number of other minor modi{\textregistered}cations, the new model produces better results than the original over a wider range of climates. Our method does not require reparameterization on a site-by-site basis, a distinct advantage over the original approach. We do require observations of dewpoint temperature, which the original model does not, but we suggest a method that could eliminate this dependency. Mean absolute error (MAE) for predictions of clear-sky transmittance was improved by 28{\%} compared to the original model formulation. Aerosols and snowcover probably contribute to variation in clear-sky transmittance that remains unexplained by our method. MAE and bias for prediction of daily incident radiation were about 2.4 MJ m {\"{y}}2 day {\"{y}}1 and 0.5 MJ m {\"{y}}2 day {\"{y}}1, respectively. As a percent of the average observed values of incident radiation, MAE and bias are about 15{\%} and 4{\%}, respectively. The lowest errors and smallest biases (percent basis) occurred during the summer. The highest prediction biases were associated with stations having a strong seasonal concentration of precipitation, with underpredictions at summerprecipitation stations, and overpredictions at winter-precipitation stations. Further study is required to characterize the behavior of this method for tropical climates.},
@@ -197,34 +204,53 @@ author = {Gudmundsson, L.},
 title = {{qmap: Statistical transformations for post-processing climate model output. R package version 1.0-4.}},
 year = {2016}
 }
-@article{Thornton2000,
-abstract = {Using daily observations of temperature, precipitation, radiation, and humidity from 24 stations spanning a large elevation gradient in Austria, we tested several previously defined algorithms for estimating daily radiation and humidity. The estimation algorithms were first tested independently, and then combined, resulting in a combined algorithm for estimating both radiation and humidity that relies only on temperature and precipitation inputs. Mean absolute errors (MAE) for joint radiation and humidity estimates were 2.52 MJ m$\backslash$n -2 per day and 85.6 Pa, respectively, close to values reported for the algorithm development studies. Biases were low: +0.02 MJ m$\backslash$n -2 per day and +28.2 Pa for radiation and humidity, respectively. Initial results showed biases in estimated radiation related to horizon obstruction and snowpack. We amended the original algorithm, successfully eliminating these effects. Annual prediction MAE was weakly correlated with elevation, and annual bias was not correlated with elevation. Analysis of seasonal patterns in error-elevation relationships showed several periods with significant trends. Radiation MAE was slightly higher in mid-summer for higher elevations, and radiation biases were in general closer to zero throughout the spring and summer at higher elevations. Humidity estimates showed an increased MAE and positive bias at higher elevations in winter. We concluded that the effect of different temperature lapse rates for daily maximum and minimum temperature on the relationship between diurnal temperature range and atmospheric transmittance does not seriously impair predictions over steep elevation gradients in complex terrain. (C) 2000 Elsevier Science B.V.},
-author = {Thornton, Peter E. and Hasenauer, Hubert and White, Michael a.},
-doi = {10.1016/S0168-1923(00)00170-2},
-file = {:D$\backslash$:/Mendeley Desktop/Thornton, Hasenauer, White - 2000 - Simultaneous estimation of daily solar radiation and humidity from observed temperature and precipit.pdf:pdf},
-isbn = {0168-1923},
-issn = {01681923},
-journal = {Agricultural and Forest Meteorology},
-keywords = {Biometeorology,Humidity,Lapse rate,Snowcover,Solar radiation,Temperature},
-number = {4},
-pages = {255--271},
-title = {{Simultaneous estimation of daily solar radiation and humidity from observed temperature and precipitation: An application over complex terrain in Austria}},
-volume = {104},
-year = {2000}
+@article{Boe2007,
+archivePrefix = {arXiv},
+arxivId = {10.1002/joc.1602},
+author = {Bo{\'{e}}, J and Terray, L and Habets, F and Martin, E},
+doi = {10.1002/joc.1602},
+eprint = {joc.1602},
+file = {:D$\backslash$:/Mendeley Desktop/Bo{\'{e}} et al. - 2007 - Statistical and dynamical downscaling of the Seine basin climate for hydro-meteorological studies.pdf:pdf},
+journal = {International Journal of Climatology},
+pages = {1643--1655},
+primaryClass = {10.1002},
+title = {{Statistical and dynamical downscaling of the Seine basin climate for hydro-meteorological studies}},
+volume = {27},
+year = {2007}
 }
-@article{Penman1956,
-author = {Penman, H.L.},
-journal = {Netherlands Journal of Agricultural Science},
-pages = {9--29},
-title = {{Evaporation: An introductory survey}},
-volume = {4},
-year = {1956}
+@article{McMahon2013,
+author = {McMahon, T.A. and Peel, M.C. and Lowe, L. and Srikanthan, R. and McVicar, T.R.},
+doi = {10.5194/hess-17-1331-2013},
+file = {:D$\backslash$:/Mendeley Desktop/McMahon et al. - 2013 - Estimating actual, potential, reference crop and pan evaporation using standard meteorological data a pragmat(2).pdf:pdf;:D$\backslash$:/Mendeley Desktop/McMahon et al. - 2013 - Estimating actual, potential, reference crop and pan evaporation using standard meteorological data a pragmatic.pdf:pdf},
+journal = {Hydrology {\&} Earth System Sciences},
+pages = {1331--1363},
+title = {{Estimating actual, potential, reference crop and pan evaporation using standard meteorological data: a pragmatic synthesis}},
+volume = {17},
+year = {2013}
 }
-@article{Penman1948,
-author = {Penman, H.L.},
-journal = {Proceedings of the Royal Society of London. Series A. Mathematical and Physical Sciences},
-pages = {129--145},
-title = {{Natural evaporation from open water, bare soil and grass}},
-volume = {193},
-year = {1948}
+@article{Apipattanavis2007,
+abstract = {We propose a semiparametric multivariate weather generator with greater ability to reproduce the historical statistics, especially the wet and dry spells. The proposed approach has two steps: (1) a Markov Chain for generating the precipitation state (i.e., no rain, rain, or heavy rain), and (2) a k-nearest neighbor (k-NN) bootstrap resampler for generating the multivariate weather variables. The Markov Chain captures the spell statistics while the k-NN bootstrap captures the distributional and lag-dependence statistics of the weather variables. Traditional k-NN generators tend to under-simulate the wet and dry spells that are keys to watershed and agricultural modeling for water planning and management; hence the motivation for this research. We demonstrate the utility of the proposed approach and its improvement over the traditional k-NN approach through an application to daily weather data from Pergamino in the Pampas region of Argentina. We show the applicability of the proposed framework in simulating weather scenarios conditional on the seasonal climate forecast and also at multiple sites in the Pampas region. Copyright 2007 by the American Geophysical Union.},
+author = {Apipattanavis, Somkiat and Podest{\'{a}}, Guillermo and Rajagopalan, Balaji and Katz, Richard W.},
+doi = {10.1029/2006WR005714},
+file = {:D$\backslash$:/Mendeley Desktop/Apipattanavis et al. - 2007 - A semiparametric multivariate and multisite weather generator.pdf:pdf},
+issn = {00431397},
+journal = {Water Resources Research},
+number = {11},
+title = {{A semiparametric multivariate and multisite weather generator}},
+volume = {43},
+year = {2007}
+}
+@article{Steinschneider2013,
+abstract = {A multivariate, multisite daily weather generator is presented for use in decision-centric vulnerability assessments under climate change. The tool is envisioned to be useful for a wide range of socioeconomic and biophysical systems sensitive to different aspects of climate variability and change. The proposed stochastic model has several components, including (1) a wavelet decomposition coupled to an autoregressive model to account for structured, low-frequency climate oscillations, (2) a Markov chain and k-nearest-neighbor (KNN) resampling scheme to simulate spatially distributed, multivariate weather variables over a region, and (3) a quantile mapping procedure to enforce long-term distributional shifts in weather variables that result from prescribed climate changes. The Markov chain is used to better represent wet and dry spell statistics, while the KNN bootstrap resampler preserves the covariance structure between the weather variables and across space. The wavelet-based autoregressive model is applied to annual climate over the region and used to modulate the Markov chain and KNN resampling, embedding appropriate low-frequency structure within the daily weather generation process. Parameters can be altered in any of the components of the proposed model to enable the generation of realistic time series of climate variables that exhibit changes to both lower-order and higher-order statistics at long-term (interannual), mid-term (seasonal), and short-term (daily) timescales. The tool can be coupled with impact models in a bottom-up risk assessment to efficiently and exhaustively explore the potential climate changes under which a system is most vulnerable. An application of the weather generator is presented for the Connecticut River basin to demonstrate the tool's ability to generate a wide range of possible climate sequences over an extensive spatial domain. {\textcopyright} 2013. American Geophysical Union. All Rights Reserved.},
+author = {Steinschneider, Scott and Brown, Casey},
+doi = {10.1002/wrcr.20528},
+file = {:D$\backslash$:/Mendeley Desktop/Steinschneider, Brown - 2013 - A semiparametric multivariate, multisite weather generator with low-frequency variability for use in clim.pdf:pdf},
+issn = {00431397},
+journal = {Water Resources Research},
+keywords = {climate change,risk,weather generator},
+number = {11},
+pages = {7205--7220},
+title = {{A semiparametric multivariate, multisite weather generator with low-frequency variability for use in climate risk assessments}},
+volume = {49},
+year = {2013}
 }
